[package]
name = "java-lsp"
description = "A Java Language Server"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
jclassfile = "0.2.0"
lsp-server = "0.7.8"
lsp-types = "=0.95.0"
ropey = "1.6.1"
serde = "1"
serde_json = "1"
thiserror = "2"
tree-sitter = "0.25"
tree-sitter-java = "0.23"
walkdir = "2"
zip = "4.3.0"
